assets/css/main.css
/* ... */
				#sidebar nav > ul > li:nth-child(16) {
					-moz-transition-delay: 3.45s;
					-webkit-transition-delay: 3.45s;
					-ms-transition-delay: 3.45s;
					transition-delay: 3.45s;
				}

				#sidebar nav > ul > li:nth-child(17) {
					-moz-transition-delay: 3.65s;
					-webkit-transition-delay: 3.65s;
					-ms-transition-delay: 3.65s;
					transition-delay: 3.65s;
				}

				#sidebar nav > ul > li:nth-child(18) {
					-moz-transition-delay: 3.85s;
					-webkit-transition-delay: 3.85s;
					-ms-transition-delay: 3.85s;
					transition-delay: 3.85s;
				}

				#sidebar nav > ul > li:nth-child(19) {
					-moz-transition-delay: 4.05s;
					-webkit-transition-delay: 4.05s;
					-ms-transition-delay: 4.05s;
					transition-delay: 4.05s;
				}

				#sidebar nav > ul > li:nth-child(20) {
					-moz-transition-delay: 4.25s;
					-webkit-transition-delay: 4.25s;
					-ms-transition-delay: 4.25s;
					transition-delay: 4.25s;
				}

		#sidebar nav a {
			-moz-transition: color 0.2s ease;
			-webkit-transition: color 0.2s ease;
			-ms-transition: color 0.2s ease;
			transition: color 0.2s ease;
			border: 0;
			color: rgba(255, 255, 255, 0.35);
			display: block;
			font-size: 0.6em;
			font-weight: bold;
			letter-spacing: 0.25em;
			line-height: 1.75;
			outline: 0;
			padding: 1.35em 0;
			position: relative;
			text-decoration: none;
			text-transform: uppercase;
		}

			#sidebar nav a:before, #sidebar nav a:after {
				border-radius: 0.2em;
				bottom: 0;
				content: '';
				height: 0.2em;
				position: absolute;
				right: 0;
				width: 100%;
			}

			#sidebar nav a:before {
				background: #2e3c5a;
			}

			#sidebar nav a:after {
				background-image: -moz-linear-gradient(to right, #4167a6, #4ca07e);
				background-image: -webkit-linear-gradient(to right, #4167a6, #4ca07e);
				background-image: -ms-linear-gradient(to right, #4167a6, #4ca07e);
				background-image: linear-gradient(to right, #4167a6, #4ca07e);
				-moz-transition: max-width 0.2s ease;
				-webkit-transition: max-width 0.2s ease;
				-ms-transition: max-width 0.2s ease;
				transition: max-width 0.2s ease;
				max-width: 0;
			}

			#sidebar nav a:hover {
				color: rgba(255, 255, 255, 0.55);
			}

			#sidebar nav a.active {
				color: #ffffff;
			}

				#sidebar nav a.active:after {
					max-width: 100%;
				}

		body.is-preload #sidebar > .inner {
			opacity: 0;
		}

		body.is-preload #sidebar nav ul li {
			-moz-transform: translateY(2em);
			-webkit-transform: translateY(2em);
			-ms-transform: translateY(2em);
			transform: translateY(2em);
			opacity: 0;
		}

		@media screen and (max-width: 1280px) {

			#sidebar {
				height: 3.5em;
				left: 0;
				line-height: 3.5em;
				overflow: hidden;
				padding: 0;
				text-align: center;
				top: 0;
				width: 100%;
			}

				#sidebar > .inner {
					-moz-flex-direction: row;
					-webkit-flex-direction: row;
					-ms-flex-direction: row;
					flex-direction: row;
					-moz-align-items: -moz-stretch;
					-webkit-align-items: -webkit-stretch;
					-ms-align-items: -ms-stretch;
					align-items: stretch;
					height: inherit;
					line-height: inherit;
				}

				#sidebar nav {
					height: inherit;
					line-height: inherit;
				}

					#sidebar nav ul {
						display: -moz-flex;
						display: -webkit-flex;
						display: -ms-flex;
						display: flex;
						height: inherit;
						line-height: inherit;
						margin: 0;
					}

						#sidebar nav ul li {
							display: block;
							height: inherit;
							line-height: inherit;
							margin: 0 0 0 2em;
							padding: 0;
						}

					#sidebar nav a {
						height: inherit;
						line-height: inherit;
						padding: 0;
					}

						#sidebar nav a:after {
							background-image: none;
							background-color: #4ca07e;
						}

		}

		@media screen and (max-width: 736px) {

			#sidebar {
				display: none;
			}

		}

/* Intro */

	#intro {
		background-attachment: fixed;
		background-image: url("images/intro.svg");
		background-position: top right;
		background-repeat: no-repeat;
		background-size: 100% 100%;
	}


	.profile-img {
		display: -webkit-box;
		display: -ms-flexbox;
		display: flex;
		margin-bottom: 0.5em;
	}

	.typewriter h1 {
		border-right: .15em solid white;
		white-space: nowrap;
  	overflow: hidden;
	}

	.typewriter h1:nth-child(1) {
		width: 8em;
		margin: 20px 20px 0px;
		-webkit-animation: type 2s steps(40, end);
		animation: type 2s steps(40, end);
		-webkit-animation-fill-mode: forwards;
		animation-fill-mode: forwards;

	}

	.typewriter h1:nth-child(2) {
		width: 9em;
		margin: 0px 20px 0px;
		opacity: 0;
		-webkit-animation: type2 2s steps(40, end);
		animation: type2 2s steps(40, end);
		-webkit-animation-delay: 2s;
		animation-delay: 2s;
		-webkit-animation-fill-mode: forwards;
		animation-fill-mode: forwards;
	}

	@keyframes type {
		0% {
			width: 0;
		}
		99.9% {
			border-right: .15em solid white;
		}
		100% {
			border: none;
		}
	}

	@-webkit-keyframes type {
		0% {
			width: 0;
		}
		99.9% {
			border-right: .15em solid white;
		}
		100% {
			border: none;
		}
	}

	@keyframes type2 {
		0% {
			width: 0;
		}
		1% {
			opacity: 1;
		}
		99.9% {
			border-right: .15em solid white;
		}
		100% {
			opacity: 1;
			border: none;
		}
	}

	@-webkit-keyframes type2 {
		0% {
			width: 0;
		}
		1% {
			opacity: 1;
		}
		99.9% {
			border-right: .15em solid white;
		}
		100% {
			opacity: 1;
			border: none;
		}
	}

	#intro-img {
		position: relative;
		width: 100%;
		max-width: 200px;
		height: 100%;
		max-height: 200px;
		border: 1px solid transparent;
		border-radius: 20%;
	}


		#intro p {
			font-size: 1.25em;
		}

			@media screen and (max-width: 980px) {

				#intro p br {
					display: none;
				}

			}

			@media screen and (max-width: 736px) {

				#intro p {
					font-size: 1em;
				}

			}

		@media screen and (max-width: 1280px) {

			#intro {
				background-attachment: scroll;
			}

		}

/* Additional Styling */
	#skill-icons {
		transition: all .2s ease-in-out;
		/* overflow: hidden; */
	}
/* ... */

